# pk_project

./: README.md  prototype.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code_coverage.yml  environment_testing.yml
docs/: conf.py  index.rst
pkmodel/: __init__.py  compartment.py  model.py  protocol.py
pkmodel/tests/: test_compartment.py  test_model.py  test_protocol.py
